--- a/proveedor-service/src/main/resources/application.yml
+++ b/proveedor-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   r2dbc:
-    url: r2dbc:postgresql://database-1.ckbmcaom0bdy.us-east-1.rds.amazonaws.com:5432/postgres?sslMode=require
+    url: r2dbc:postgresql://database-1.ckbmcaom0bdy.us-east-1.rds.amazonaws.com:5432/arka?sslMode=require
     username: postgres
     password: dbAdm0925
   application:
