--- a/.github/workflows/deploy-inventory.yml
+++ b/.github/workflows/deploy-inventory.yml
@@ -16,6 +16,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Make mvnw executable
+      run: chmod +x mvnw
+
     - name: Build JAR
       run: ./mvnw clean package -DskipTests
 
