--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -54,6 +54,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!--En spring boot con esta dependencia puedo omitir JUnit y Mockito por separado -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
