--- a/reporte-ventas/src/main/resources/application.yml
+++ b/reporte-ventas/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   r2dbc:
-    url: r2dbc:postgresql://database-1.ckbmcaom0bdy.us-east-1.rds.amazonaws.com:5432/arka?sslMode=require
-    username: postgres
-    password: dbAdm0925
+    url: ${R2DBC_URL:r2dbc:postgresql://database-1.ckbmcaom0bdy.us-east-1.rds.amazonaws.com:5432/arka?sslMode=require}
+    username: ${R2DBC_USERNAME:postgres}
+    password: ${R2DBC_PASSWORD:dbAdm0925}
   application:
     name: reporte
 server:
-  port: 8082
+  port: 8091
