--- a/products-service/src/main/resources/application.yml
+++ b/products-service/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   data:
     mongodb:
+      #configuración para desarrollo local
+     # uri: ${MONGODB_URI:mongodb://localhost:27017/arka_products}
+      #configuración para ec2
       uri: ${MONGODB_URI:mongodb://13.220.97.161:27017/arka_products}
 server:
   port: 8087
