--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   r2dbc:
-    url: ${R2DBC_URL:r2dbc:postgresql://database-1.ckbmcaom0bdy.us-east-1.rds.amazonaws.com:5432/arka?sslMode=require}
-    username: ${R2DBC_USERNAME:postgres}
-    password: ${R2DBC_PASSWORD:dbAdm0925}
+    url: ${R2DBC_URL}
+    username: ${R2DBC_USERNAME}
+    password: ${R2DBC_PASSWORD}
   sql:
     init:
       continue-on-error: true
