--- a/reporte-service/pom.xml
+++ b/reporte-service/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.25.14</version>
+		</dependency>
 	</dependencies>
 
 	<build>
